--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="canvas-container">
         <img class="hero-yarn-image" src="/yarn_girl_model.png" alt="">
         <video class="hero-background-video" autoplay loop muted playsinline>
-            <source src="public/ribbons.mp4" type="video/mp4">
+            <source src="/ribbons.mp4" type="video/mp4">
         </video>
         <div class="hero-bottom-ui">
             <div class="hero-coming-soon">A short film. Coming soon.</div>
