--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p class="synopsis-text">This female-led proof of concept marks the director's independent debut and lays the foundation for a feature-length coming-of-age drama. Powered by an NYU Tisch team and supported by Emmy and Peabody-nominated mentors, the film shoots June 2026 in Los Angeles, with completion targeted for late 2026.</p>
             <p class="synopsis-text"><em>Story by Khushi Hora<br>
             Screenplay by Anjali Moorthy & Khushi Hora</em></p>
-            <form class="pitch-deck-form" id="pitch-deck-form" data-api-url="">
+            <form class="pitch-deck-form" id="pitch-deck-form" data-api-url="https://script.google.com/macros/s/AKfycbxhHfEnSl8dma245kt0ulAAL_w5A8o1eAPMw31j2WqYSuztCJ6a3jhN5TkIhFLCmd19/exec">
                 <input type="email" name="email" class="updates-input" placeholder="Your email" required>
                 <button type="submit" class="pitch-deck-btn">Request Pitch Deck & Director's Statement</button>
             </form>
@@ -267,10 +267,11 @@
           btn.dataset.originalText = btn.textContent;
           btn.textContent = 'Submitting...';
 
-          fetch('/api/subscribe', {
+          fetch(apiUrl, {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ email: email })
+            body: JSON.stringify({ email: email }),
+            mode: 'cors'
           })
           .then(r => r.json())
           .then(data => {
