--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
         <div class="team-grid">
             <div class="team-member">
                 <div class="team-member-photo">
+                    <img src="/ConsultingProducer_Puneet.Zohar.Sachdev.jpg" alt="Puneet Zohar Sachdev">
+                    <div class="team-member-overlay">
+                        <p class="team-member-bio">Puneet Zohar Sachdev is a Cambridge-educated HR executive and founder of Evogenesis, specializing in AI-powered HR transformation and executive coaching. He is currently advising on The Last Dinner, coaching the director and producers on team management and leadership efficiency.</p>
+                    </div>
+                </div>
+                <span class="team-member-name">Puneet Zohar Sachdev · Consulting Producer</span>
+            </div>
+            <div class="team-member">
+                <div class="team-member-photo">
                     <img src="/ConsultingProducer_Dorothy.McKim" alt="Dorothy McKim">
                     <div class="team-member-overlay">
                         <p class="team-member-bio"> Two-time Emmy Award-winning and Oscar-nominated producer at Walt Disney Animation Studios. Produced acclaimed projects including the Prep & Landing specials and Get A Horse!, with production credits on The Little Mermaid, Beauty and the Beast, The Lion King, and Tarzan.</p>
@@ -100,30 +109,12 @@
             </div>
             <div class="team-member">
                 <div class="team-member-photo">
-                    <img src="/ConsultingProducer_Puneet.Zohar.Sachdev.jpg" alt="Puneet Zohar Sachdev">
+                    <img src="/ExecutiveProducer_JulieCavaliere.jpg" alt="Julie Cavaliere">
                     <div class="team-member-overlay">
-                        <p class="team-member-bio">Consulting Producer for The Last Dinner. Supporting the creative vision and production strategy.</p>
+                        <p class="team-member-bio">Peabody, PGA Innovation Award, and Webby-nominated writer, director, and producer. Directed Meta's acclaimed VR series Reimagined (premiered at SXSW) and has premiered work at Venice, Cannes, and Tribeca. Named Austin Film Festival "Screenwriter to Watch."</p>
                     </div>
                 </div>
-                <span class="team-member-name">Puneet Zohar Sachdev · Consulting Producer</span>
-            </div>
-            <div class="team-member">
-                <div class="team-member-photo">
-                    <img src="/CreativeProducer_AnjaliMoorthy.jpeg" alt="Anjali Moorthy">
-                    <div class="team-member-overlay">
-                        <p class="team-member-bio">NYU Tisch Film & TV graduate and director/producer. Her horror-thriller "Nest Egg" about female foeticide premiered at NY Shorts International Film Festival. Member and Marketing Liaison to Women in Film & Television Austin, committed to normalized representation in cinema.</p>
-                    </div>
-                </div>
-                <span class="team-member-name">Anjali Moorthy · Writer & Creative Producer</span>
-            </div>
-            <div class="team-member">
-                <div class="team-member-photo">
-                    <img src="/ExecutiveProducer%20%26%20Composer_Simon.Taufique.jpg" alt="Simon Taufique">
-                    <div class="team-member-overlay">
-                        <p class="team-member-bio">Emmy-nominated British-Indian producer and composer, and Sundance, Berlinale, and Tribeca alum. Produced films for Lionsgate/Universal, Amazon Originals, and HBO Max. Teaches Film Producing at the Sundance Institute and is a member of BAFTA & PGA.                        </p>
-                    </div>
-                </div>
-                <span class="team-member-name">Simon Taufique · Executive Producer & Composer</span>
+                <span class="team-member-name">Julie Cavaliere · Executive Producer</span>
             </div>
             <div class="team-member">
                 <div class="team-member-photo">
@@ -136,12 +127,30 @@
             </div>
             <div class="team-member">
                 <div class="team-member-photo">
-                    <img src="/ExecutiveProducer_JulieCavaliere.jpg" alt="Julie Cavaliere">
+                    <img src="/ExecutiveProducer%20%26%20Composer_Simon.Taufique.jpg" alt="Simon Taufique">
                     <div class="team-member-overlay">
-                        <p class="team-member-bio">Peabody, PGA Innovation Award, and Webby-nominated writer, director, and producer. Directed Meta's acclaimed VR series Reimagined (premiered at SXSW) and has premiered work at Venice, Cannes, and Tribeca. Named Austin Film Festival "Screenwriter to Watch."</p>
+                        <p class="team-member-bio">Emmy-nominated British-Indian producer and composer, and Sundance, Berlinale, and Tribeca alum. Produced films for Lionsgate/Universal, Amazon Originals, and HBO Max. Teaches Film Producing at the Sundance Institute and is a member of BAFTA & PGA.                        </p>
                     </div>
                 </div>
-                <span class="team-member-name">Julie Cavaliere · Executive Producer</span>
+                <span class="team-member-name">Simon Taufique · Executive Producer & Composer</span>
+            </div>
+            <div class="team-member">
+                <div class="team-member-photo">
+                    <img src="/Writer%20%26%20Director_Khushi.Hora" alt="Khushi Hora">
+                    <div class="team-member-overlay">
+                        <p class="team-member-bio">NYU Tisch filmmaker pursuing emerging storytelling technologies. Extensive live action film production experience (10+ written/ directed) . Has interned at Netflix Creative Innovation, Disney, and the Producers Guild of America and Academy Gold Rising Fellow. . Co-author of CVPR research paper on generative AI in film, and MIT AI Filmmaking Hackathon winner.</p>
+                    </div>
+                </div>
+                <span class="team-member-name">Khushi Hora · Writer & Director</span>
+            </div>
+            <div class="team-member">
+                <div class="team-member-photo">
+                    <img src="/CreativeProducer_AnjaliMoorthy.jpeg" alt="Anjali Moorthy">
+                    <div class="team-member-overlay">
+                        <p class="team-member-bio">NYU Tisch Film & TV graduate and director/producer. Her horror-thriller "Nest Egg" about female foeticide premiered at NY Shorts International Film Festival. Member and Marketing Liaison to Women in Film & Television Austin, committed to normalized representation in cinema.</p>
+                    </div>
+                </div>
+                <span class="team-member-name">Anjali Moorthy · Writer & Creative Producer</span>
             </div>
             <div class="team-member">
                 <div class="team-member-photo">
@@ -161,16 +170,7 @@
                 </div>
                 <span class="team-member-name">Rashida Saherwala · Producer</span>
             </div>
-            <div class="team-member">
-                <div class="team-member-photo">
-                    <img src="/Producer_MinaHuang.jpg" alt="Mina Huang">
-                    <div class="team-member-overlay">
-                        <p class="team-member-bio">Multidisciplinary producer and writer-director with a BFA from School of Visual Arts, currently pursuing MPS at NYU's ITP. Her award-winning thesis film HOBBY has screened at New York Shorts, Hawaii Film Awards, and other festivals.                        </p>
-                    </div>
-                </div>
-                <span class="team-member-name">Mina Huang · Producer</span>
-            </div>
-            <div class="team-member">
+            <div class="team-member team-member-centered">
                 <div class="team-member-photo">
                     <img src="/Producer_Shiphrah.Moses" alt="Shiphrah Moses">
                     <div class="team-member-overlay">
@@ -179,14 +179,14 @@
                 </div>
                 <span class="team-member-name">Shiphrah Moses · Producer</span>
             </div>
-            <div class="team-member">
+            <div class="team-member team-member-centered">
                 <div class="team-member-photo">
-                    <img src="/Writer%20%26%20Director_Khushi.Hora" alt="Khushi Hora">
+                    <img src="/Producer_MinaHuang.jpg" alt="Mina Huang">
                     <div class="team-member-overlay">
-                        <p class="team-member-bio">NYU Tisch filmmaker pursuing emerging storytelling technologies. Extensive live action film production experience (10+ written/ directed) . Has interned at Netflix Creative Innovation, Disney, and the Producers Guild of America and Academy Gold Rising Fellow. . Co-author of CVPR research paper on generative AI in film, and MIT AI Filmmaking Hackathon winner.</p>
+                        <p class="team-member-bio">Multidisciplinary producer and writer-director with a BFA from School of Visual Arts, currently pursuing MPS at NYU's ITP. Her award-winning thesis film HOBBY has screened at New York Shorts, Hawaii Film Awards, and other festivals.                        </p>
                     </div>
                 </div>
-                <span class="team-member-name">Khushi Hora · Writer & Director</span>
+                <span class="team-member-name">Mina Huang · Producer</span>
             </div>
         </div>
     </section>
@@ -194,7 +194,7 @@
     <!-- Footer: social links + Get Updates -->
     <footer id="footer">
         <div class="footer-links">
-            <a href="https://www.instagram.com/lastdinnerfilm/?hl=en" target="_blank" rel="noopener noreferrer" class="social-link instagram-link">
+            <a href="https://www.instagram.com/thelastdinner.film/" target="_blank" rel="noopener noreferrer" class="social-link instagram-link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" fill="currentColor"/>
                 </svg>
