--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <div class="hero-gradient"></div>
     </div>
     
+    <!-- Content after hero (synopsis, sections 2–4, team, footer) -->
+    <div id="content-after-hero">
     <!-- Synopsis section -->
     <div id="synopsis-section">
         <div class="synopsis-content">
@@ -170,23 +172,25 @@
                 </div>
                 <span class="team-member-name">Rashida Saherwala · Producer</span>
             </div>
-            <div class="team-member team-member-centered">
-                <div class="team-member-photo">
-                    <img src="/Producer_Shiphrah.Moses" alt="Shiphrah Moses">
-                    <div class="team-member-overlay">
-                        <p class="team-member-bio">Screenwriter, playwright, and producer studying Dramatic Writing and Producing at NYU Tisch. Her plays have been performed at Big Bang Works in Progress, Lighthouse Ladies, and Lenaea Theater Festival. Top finalist at Entertwine's AAPDI 24-Hour Play Contest.</p>
+            <div class="team-member-pair">
+                <div class="team-member">
+                    <div class="team-member-photo">
+                        <img src="/Producer_Shiphrah.Moses" alt="Shiphrah Moses">
+                        <div class="team-member-overlay">
+                            <p class="team-member-bio">Screenwriter, playwright, and producer studying Dramatic Writing and Producing at NYU Tisch. Her plays have been performed at Big Bang Works in Progress, Lighthouse Ladies, and Lenaea Theater Festival. Top finalist at Entertwine's AAPDI 24-Hour Play Contest.</p>
+                        </div>
                     </div>
+                    <span class="team-member-name">Shiphrah Moses · Producer</span>
                 </div>
-                <span class="team-member-name">Shiphrah Moses · Producer</span>
-            </div>
-            <div class="team-member team-member-centered">
-                <div class="team-member-photo">
-                    <img src="/Producer_MinaHuang.jpg" alt="Mina Huang">
-                    <div class="team-member-overlay">
-                        <p class="team-member-bio">Multidisciplinary producer and writer-director with a BFA from School of Visual Arts, currently pursuing MPS at NYU's ITP. Her award-winning thesis film HOBBY has screened at New York Shorts, Hawaii Film Awards, and other festivals.                        </p>
+                <div class="team-member">
+                    <div class="team-member-photo">
+                        <img src="/Producer_MinaHuang.jpg" alt="Mina Huang">
+                        <div class="team-member-overlay">
+                            <p class="team-member-bio">Multidisciplinary producer and writer-director with a BFA from School of Visual Arts, currently pursuing MPS at NYU's ITP. Her award-winning thesis film HOBBY has screened at New York Shorts, Hawaii Film Awards, and other festivals.                        </p>
+                        </div>
                     </div>
+                    <span class="team-member-name">Mina Huang · Producer</span>
                 </div>
-                <span class="team-member-name">Mina Huang · Producer</span>
             </div>
         </div>
     </section>
@@ -229,6 +233,7 @@
             <span class="designer-open">Open to Collab</span>
         </div>
     </footer>
+    </div>
     
     <!-- Torch cursor overlay -->
     <div id="torch-overlay"></div>
