--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
             <div class="team-member">
                 <div class="team-member-photo">
-                    <img src="/ExecutiveProducer%20%26%20Composer_Simon.Taufique.jpg" alt="Simon Taufique">
+                    <img src="/simon.png" alt="Simon Taufique">
                     <div class="team-member-overlay">
                         <p class="team-member-bio">Emmy-nominated British-Indian producer and composer, and Sundance, Berlinale, and Tribeca alum. Produced films for Lionsgate/Universal, Amazon Originals, and HBO Max. Teaches Film Producing at the Sundance Institute and is a member of BAFTA & PGA.                        </p>
                     </div>
